[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/audio/dizzy_ingame.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/audio.gd" type="Script" id=2]
[ext_resource path="res://Assets/audio/dizzy_coin.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/audio/dizzy_dead.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/audio/dizzy_intro.ogg" type="AudioStream" id=5]

[node name="audio" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="finished" from="theme" to="." method="_on_theme_finished"]
[connection signal="finished" from="coin" to="." method="_on_coin_finished"]
[connection signal="finished" from="dead" to="." method="_on_dead_finished"]
[connection signal="finished" from="intro" to="." method="_on_intro_finished"]
